--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Shrinking sticky header -->
   <header id="sticky-header">
   <div class="header-content">
-    <a href="#" style="font-size:24px" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"> Kartik Sood</span>
+    <a href="#" style="font-size:24px" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"> Kartik Mohindru</span>
     </a></div></header>
 
   <!-- Hero banner -->
@@ -46,7 +46,6 @@
         <div class="projects">
           <div class="project"><a href="work1.html" class="page-link">Associate Vice President (Data Engineering)</a></div>
           <div class="project"><a href="work2.html" class="page-link">Data Engineer</a></div>
-          <div class="project"><a href="work2.html" class="page-link">ETL Developer</a></div>
         </div></section>
 
         <section id="portfolio_projects" class="section">
