--- a/work1.html
+++ b/work1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Research Data Engineer – Geetika Sood</title>
+  <titleAssociate Vice President (Data Engineering) – Kartik Mohindru</title>
   <link rel="stylesheet" href="page-style.css" />
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"  rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
@@ -15,7 +15,7 @@
   <!-- Sticky Header -->
   <header id="sticky-header">
     <div class="header-content">
-      <a href="index.html" class="site-title">Geetika Sood</a>
+      <a href="index.html" class="site-title">Kartik Mohindru</a>
      <!-- <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="#work">Work</a>
