--- a/work1.html
+++ b/work1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <titleAssociate Vice President (Data Engineering) – Kartik Mohindru</title>
+  <title>Associate Vice President (Data Engineering) – Kartik Mohindru</title>
   <link rel="stylesheet" href="page-style.css" />
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"  rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
@@ -27,7 +27,7 @@
   <main class="work-section">
     <section id="work" class="work-container">
       <div class="work-text">
-        <h2>Research Data Engineer</h2>
+        <h2>Associate Vice President (Data Engineering)</h2>
         <p>
             I’m involved in the entire product development lifecycle and continuous  maintenance of the product proprietary to Enfusion which caters to 500+
             clients  and interacts with a wide range of heterogeneous sources of data. Alongwith, this managing a team across the globe.
