--- a/index.html
+++ b/index.html
@@ -48,27 +48,24 @@
           <div class="project"><a href="work2.html" class="page-link">Data Engineer</a></div>
         </div></section>
 
-        <section id="portfolio_projects" class="section">
+        <!--section id="portfolio_projects" class="section">
         <h3>Projects</h3>
         <div class="projects">
           <div>
             <div class="project"><a href="proj1.html" class="page-link">Generating energy with footsteps</a></div>
             <br>
             <h3 style="text-align: center;">Data Analysis & vizualization</h3> 
-            
-            <!--<p>using the sensor based step count data in placed in the city</p>-->
+
           </div>
          <div> 
           <div class="project"><a href="proj2.html" class="page-link">Chicago's Weather Analysis</a></div><br>
           <h3 style="text-align: center;">Data Engineering & Time series analysis</h3>
-          <!--<p> of Chicago's weather by building an ETL pipeline and analyzing the dataset</p>  -->  
         </div>
         <div><div class="project"><a href="proj3.html" class="page-link">Worldwide Layoff Analysis</a></div><br>
           <h3 style="text-align: center;">Data Cleaning & Exploratory data analysis </h3>
-          <!--<p> the worldwide layoffs dataset</p>    -->
           </div>    
       </div>
-    </section>
+    </section-->
 
       <section id="about" class="section">   
         <h3>About Me</h3>     
