--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </br>
       <ul>
         <li><a href="#work">Work</a></li>
-        <li><a href="#portfolio_projects">Projects</a></li>
+        <!--li><a href="#portfolio_projects">Projects</a></li-->
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
